extracting details get implemented, SSTs written, fixed missing package name for BeanValidationConfiguration files
